<resources>
    <string name="app_name">Migraine Trigger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_severity">Severity</string>
    <string name="nav_answers">Answers</string>
    <string name="nav_f_a_q">F.A.Q.</string>
    <string name="nav_records">Records</string>
    <string name="nav_report">Report</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="dev_email">mithwick93@gmail.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_welcome">Welcome</string>
    <string name="app_icon">app icon</string>
    <string name="dev_name">M.S. Wickramarathne</string>
    <string name="app_version">0.5 alpha</string>
    <string name="title_activity_activity_faq">F.A.Q.</string>
    <string name="migraine_definition_para1">"\t\t\tA migraine headache can cause intense throbbing or a pulsing sensation in one area of the head and is commonly accompanied by nausea, vomiting, and extreme sensitivity to light and sound."</string>
    <string name="migraine_definition_para2">"\t\t\tMigraine attacks can cause significant pain for hours to days and be so severe that all you can think about is finding a dark, quiet place to lie down."</string>
    <string name="migraine_definition_para3">"\t\t\tSome migraines are preceded or accompanied by sensory warning symptoms (aura), such as flashes of light, blind spots, or tingling in your arm or leg."</string>
    <string name="migraine_definition_para4">"\t\t\tMedications can help reduce the frequency and severity of migraines. If treatment hasn\'t worked for you in the past, talk to your doctor about trying a different migraine headache medication. The right medicines, combined with self-help remedies and lifestyle changes, may make a big difference."</string>
    <string name="symptoms_para_1">"Migraine headaches often begin in childhood, adolescence or early adulthood. Migraines may progress through four stages, including prodrome, aura, headache and postdrome, though you may not experience all the stages."</string>
    <string name="symptom_section_1_heading">Prodrome</string>
    <string name="symptom_section_1_body">"One or two days before a migraine, you may notice subtle changes that signify an oncoming migraine, including:
	1.Constipation
	2.Depression
	3.Food cravings
	4.Hyperactivity
	5.Irritability
	6.Neck stiffness
	7.Uncontrollable yawning"</string>
    <string name="symptom_section_2_heading">Aura</string>
    <string name="symptom_section_2_body">"Aura may occur before or during migraine headaches. Auras are nervous system symptoms that are usually visual disturbances, such as flashes of light. Sometimes auras can also be touching sensations (sensory), movement (motor) or speech (verbal) disturbances. Most people experience migraine headaches without aura. Each of these symptoms usually begins gradually, builds up over several minutes, and then commonly lasts for 20 to 60 minutes. Examples of aura include:

	* Visual phenomena, such as seeing various shapes, bright spots or flashes of light
	* Vision loss
	* Pins and needles sensations in an arm or leg
	* Speech or language problems (aphasia)
	* Less commonly, an aura may be associated with limb weakness (hemiplegic migraine)."</string>
    <string name="symptom_section_3_heading">Attack</string>
    <string name="symptom_section_3_body">"When untreated, a migraine usually lasts from four to 72 hours, but the frequency with which headaches occur varies from person to person. You may have migraines several times a month or much less often. During a migraine, you may experience the following symptoms:

	* Pain on one side or both sides of your head
	* Pain that has a pulsating, throbbing quality
	* Sensitivity to light, sounds and sometimes smells
	* Nausea and vomiting
	* Blurred vision
	* Lightheadedness, sometimes followed by fainting"</string>
    <string name="symptom_section_4_heading">Postdrome</string>
    <string name="symptom_section_4_body">"The final phase, known as postdrome, occurs after a migraine attack. During this time you may feel drained and washed out, though some people report feeling mildly euphoric."</string>
    <string name="symptom_para_2_heading">See your doctor immediately or go to the emergency room</string>
    <string name="symptom_para_2_body">"If you have any of the following signs and symptoms, which may indicate other, more serious medical problems:

	* An abrupt, severe headache like a thunderclap
	* Headache with fever, stiff neck, mental confusion, seizures, double vision, weakness, numbness or trouble speaking
	* Headache after a head injury, especially if the headache gets worse
	* A chronic headache that is worse after coughing, exertion, straining or a sudden movement
	* New headache pain if you're older than 50"</string>
    <string name="causes_para_1">"Although much about the cause of migraines isn't understood, genetics and environmental factors appear to play a role.

Migraines may be caused by changes in the brainstem and its interactions with the trigeminal nerve, a major pain pathway.

Imbalances in brain chemicals — including serotonin, which helps regulate pain in your nervous system — also may be involved. Researchers continue to study the role of serotonin in migraines.

Serotonin levels drop during migraine attacks. This may cause your trigeminal system to release substances called neuropeptides, which travel to your brain's outer covering (meninges). The result is headache pain."</string>
    <string name="causes_section_1_heading">Hormonal changes in women</string>
    <string name="causes_section_1_body">"Fluctuations in estrogen seem to trigger headaches in many women with known migraines. Women with a history of migraines often report headaches immediately before or during their periods, when they have a major drop in estrogen.

Others have an increased tendency to develop migraines during pregnancy or menopause.

Hormonal medications, such as oral contraceptives and hormone replacement therapy, also may worsen migraines. Some women, however, may find their migraines occur less often when taking these medications."</string>
    <string name="causes_section_2_heading">Foods</string>
    <string name="causes_section_2_body">"Aged cheeses, salty foods and processed foods may trigger migraines. Skipping meals or fasting also can trigger attacks."</string>
    <string name="causes_section_3_heading">Food additives</string>
    <string name="causes_section_3_body">" The sweetener aspartame and the preservative monosodium glutamate, found in many foods, may trigger migraines."</string>
    <string name="causes_section_4_heading">Drinks</string>
    <string name="causes_section_4_body">"Alcohol, especially wine, and highly caffeinated beverages may trigger migraines."</string>
    <string name="causes_section_5_heading">Stress</string>
    <string name="causes_section_5_body">"Stress at work or home can cause migraines."</string>
    <string name="causes_section_6_heading">Sensory stimuli</string>
    <string name="causes_section_6_body">"Bright lights and sun glare can induce migraines, as can loud sounds. Unusual smells — including perfume, paint thinner, secondhand smoke and others — can trigger migraines in some people."</string>
    <string name="causes_section_7_heading">Changes in wake-sleep pattern</string>
    <string name="causes_section_7_body">"Missing sleep or getting too much sleep may trigger migraines in some people, as can jet lag."</string>
    <string name="causes_section_8_heading">Physical factors</string>
    <string name="causes_section_8_body">"Intense physical exertion, including sexual activity, may provoke migraines."</string>
    <string name="causes_section_9_heading">Changes in the environment</string>
    <string name="causes_section_9_body">"A change of weather or barometric pressure can prompt a migraine."</string>
    <string name="causes_section_10_heading">Medications</string>
    <string name="causes_section_10_body">"Oral contraceptives and vasodilators, such as nitroglycerin, can aggravate migraines."</string>
    <string name="risk_section_1_heading">Family history</string>
    <string name="risk_section_1_body">"Up to 90 percent of people with migraines have a family history of migraine attacks. If one or both of your parents have migraines, then you have a good chance of having migraines too."</string>
    <string name="risk_section_2_heading">Age</string>
    <string name="risk_section_2_body">"Migraines can begin at any age, though most people experience their first migraine during adolescence. By age 40, most people who have migraines have had their first attack."</string>
    <string name="risk_section_3_heading">Gender</string>
    <string name="risk_section_3_body">"Women are three times more likely to have migraines. Headaches tend to affect boys more than girls during childhood, but by the time of puberty and beyond, more girls are affected."</string>
    <string name="risk_section_4_heading">Hormonal changes</string>
    <string name="risk_section_4_body">"If you're a woman who has migraines, you may find that your headaches begin just before or shortly after onset of menstruation."</string>
    <string name="complication_section_1_heading">Abdominal problems</string>
    <string name="complication_section_1_body">"Certain pain relievers called nonsteroidal anti-inflammatory drugs (NSAIDs), such as ibuprofen (Advil, Motrin IB, others), may cause abdominal pain, bleeding, ulcers and other complications, especially if taken in large doses or for a long period of time."</string>
    <string name="complication_section_2_heading">Medication-overuse headaches</string>
    <string name="complication_section_2_body">"If you take over-the-counter or prescription headache medications more than 10 days a month for three months, or in high doses, you may be setting yourself up for a serious complication known as medication-overuse headaches.

Medication-overuse headaches occur when medications not only stop relieving pain but also cause headaches. You then use more pain medication, which continues the cycle."</string>
    <string name="complication_section_3_heading">Serotonin syndrome</string>
    <string name="record_lbl_start">Start</string>
    <string name="record_lbl_end">End</string>
    <string name="record_lbl_intensity">Intensity</string>
    <string name="record_txt_intensity_hint">click to set</string>
    <string name="record_txt_start_date_hint">Date</string>
    <string name="record_txt_start_time_hint">Time</string>
    <string name="record_txt_end_date_hint">Date</string>
    <string name="record_txt_end_time_hint">Time</string>
    <string name="record_txt_temp">temperature</string>
    <string name="record_txt_humidity">humidity</string>
    <string name="record_txt_pressure">pressure</string>
    <string name="record_lbl_weather">Weather</string>
    <string name="record_view_txt_date">Date</string>
    <string name="record_view_txt_duration">Duration</string>
    <string name="record_view_txt_intensity">Intensity</string>
    <string name="preferences_title_theme">Theme</string>
    <string name="preferences_title_backup">"Backup and Restore "</string>
    <string name="pref_backup">Backup</string>
    <string name="pref_restore">Restore</string>
    <string name="pref_theme_summery">Select the theme for Migraine Trigger</string>
    <string name="pref_theme_title">Application theme</string>
    <string name="pref_backup_summery">Backup application database</string>
    <string name="pref_restore_summery">Restore application database</string>
</resources>