<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_severity"
            android:title="@string/nav_severity" />
        <item
            android:id="@+id/nav_answers"
            android:title="@string/nav_answers" />
        <item
            android:id="@+id/nav_faq"
            android:title="@string/nav_f_a_q" />
    </group>

    <group
        android:id="@+id/report_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_record"
            android:title="@string/nav_records" />
        <item
            android:id="@+id/nav_report"
            android:title="@string/nav_report" />
    </group>

    <group
        android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about" />
    </group>


</menu>
