<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_record_basic"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="7dp"

    android:layout_marginStart="7dp"
    android:layout_marginTop="10dp"
    tools:cardCornerRadius="2dp">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:padding="5dp"
        android:rowCount="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:paddingEnd="15dp"
                    android:paddingStart="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/record_lbl_start"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txt_record_start_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/record_txt_start_date_hint"
                        android:inputType="textMultiLine"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/txt_record_start_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/record_txt_start_time_hint"
                        android:inputType="textMultiLine"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp"/>
                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="15dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/record_lbl_end"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txt_record_end_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/record_txt_end_date_hint"
                        android:inputType="textMultiLine"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp"/>

                    <EditText
                        android:id="@+id/txt_record_end_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/record_txt_end_time_hint"
                        android:inputType="textMultiLine"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="15sp"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:clickable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/record_lbl_intensity"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <RelativeLayout
                    android:id="@+id/layout_intensity"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:id="@+id/txt_record_intensity"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:clickable="true"
                        android:gravity="center_vertical|center_horizontal"
                        android:hint="@string/record_txt_intensity_hint"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="12sp"/>
                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>
    </GridLayout>

</android.support.v7.widget.CardView>
