<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/linear_weather_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"

        android:visibility="visible"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingTop="10dp"
                android:text="@string/record_lbl_weather"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_weather_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/record_txt_temp"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:id="@+id/txt_weather_humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/record_txt_humidity"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_gravity="center_horizontal">

                        <TextView
                            android:id="@+id/txt_weather_pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/record_txt_pressure"
                            android:textAppearance="?android:attr/textAppearanceSmall" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>